--- a/applications/kappa/kappa.news.in
+++ b/applications/kappa/kappa.news.in
@@ -23,6 +23,17 @@
       -  A new parameter QVALUE can be used to store a constant integer
       value in the range 0 to 255 in the QUALITY component for all pixels.
 
+   o WCSALIGN
+
+      - A new parameter ALIGNREF can be used to control the coordinate
+      system in which the input NDFs are aligned.
+
+   o WCSMOSAIC
+
+      - A new parameter ALIGNREF can be used to control the coordinate
+      system in which the input NDFs are aligned.
+
+
 1 KAPPA_Version_2.1
 
    A new release of KAPPA (2.1) is available.  The main
