CUPID: fix up sun255 to work with new stardoc system.
This was very easy. Ran the smurf sun_master.tex file through the
latexsupport script 'starlink_perl_fixup.pl'. Then removed the
\staroneline command, removed some unused definitions, changed some
\tt to \texttt commands and used the previously-defined \menuitem in
make_quickdes.

--- a/applications/cupid/make_quickdes.in
+++ b/applications/cupid/make_quickdes.in
@@ -32,6 +32,6 @@
       print "\n\nmake_quickdes: Ill-formed prologue in $ARGV[0]\n\n";
    } else {
       open( OUTFILE, ">$ARGV[0].quickdes" );
-      print OUTFILE "\\quickdes\{$name\}\{$purpose\}\{ $name \}\n\n";
+      print OUTFILE "\\menuitem\{$name\}\{$purpose\}\n\n";
       close( OUTFILE );
    }
