smurf: Build SSN/79

--- a/applications/smurf/configure.ac
+++ b/applications/smurf/configure.ac
@@ -117,14 +117,14 @@ STAR_DECLARE_DEPENDENCIES([sourceset], [sst])
 dnl    No use dependencies
 
 dnl Documentation
-STAR_LATEX_DOCUMENTATION(sun258/ sun259/ sc19/)
+STAR_LATEX_DOCUMENTATION(sun258/ sun259/ sc19/ ssn79/)
 
 dnl Ask for a config.h so that we can retain control of when to define
 dnl parameters. And also to simplify the build line
 AC_CONFIG_HEADERS(config.h)
 
 dnl  But we also need to define the docs subdirs
-DOCS_SUBDIRS="sun258 sun259 sc19"
+DOCS_SUBDIRS="sun258 sun259 sc19 ssn79"
 AC_SUBST(DOCS_SUBDIRS)
 
 AC_CONFIG_FILES(Makefile smurf.ifd component.xml libsmurf/Makefile \
@@ -134,7 +134,7 @@ AC_CONFIG_FILES(Makefile smurf.ifd component.xml libsmurf/Makefile \
                 libnanten/Makefile \
                 libsupercam/Makefile \
                 docs/Makefile docs/sun258/Makefile docs/sun259/Makefile \
-                docs/sc19/Makefile defaults/Makefile scripts/Makefile )
+                docs/sc19/Makefile docs/ssn79/Makefile defaults/Makefile scripts/Makefile )
 
 AC_CONFIG_FILES([defaults/make_pardocs], [chmod 755 defaults/make_pardocs])
 AC_CONFIG_FILES([libsmf/make_h], [chmod 755 libsmf/make_h])
