smurf: Allow timesort to handle data with differing spectral bounds
See new parameter SPECBND.

--- a/applications/smurf/smurf.ifd.in
+++ b/applications/smurf/smurf.ifd.in
@@ -5676,6 +5676,15 @@ package @PACKAGE@ {
                 helpkey *
             }
 
+            parameter specbnd {
+                type LITERAL
+                prompt {How to choose pixel bounds on output spectral axis}
+                default FIRST
+                vpath DEFAULT
+                ppath CURRENT DEFAULT
+                helpkey *
+            }
+
         }
 
         action unmakecube {
