latexsupport: initial setup of build system
latexsupport now supports the usual:
./bootstrap; ./configure; make; make install
build process. Installation will copy the various latex and
configuration files into $STARLINK_DIR/share/latexsupport.

This commit allocates SUN 270 for documenting this system (in the
etc/info/docs_lis file). sun270.tex is still blank however.

Makefile.dependencies and componentset.xml have been updated with
the new package at the top level.

--- a/Makefile.dependencies
+++ b/Makefile.dependencies
@@ -1691,6 +1691,10 @@ $(MANIFESTS)/latex2html:
 	cd thirdparty/latex2html/latex2html \
 	  && $(MAKE_CPT)
 
+$(MANIFESTS)/latexsupport:
+	cd applications/latexsupport \
+	  && $(MAKE_CPT)
+
 # Component libtool is a buildsupport component
 $(MANIFESTS)/libtool:
 	cd thirdparty/fsf/autotools/libtool \
@@ -3256,6 +3260,7 @@ SUPPORTED_COMPONENTS = \
 	$(MANIFESTS)/jcmtdr \
 	$(MANIFESTS)/kaplibs \
 	$(MANIFESTS)/kappa \
+	$(MANIFESTS)/latexsupport \
 	$(MANIFESTS)/messgen \
 	$(MANIFESTS)/nbs \
 	$(MANIFESTS)/ndf \
