star2html: takes latexsupport as dependency
Setting the $STARLATEXSUPPORT variable is no required before
building; star2html can set all tex4ht required environment
variables itself relative to the installed latexsupport.

Also updated the toplevel Makefile.dependencies and
componentset.xml with the new dependency, and removed
references to STARLATEXSUPPORT from the README.

--- a/Makefile.dependencies
+++ b/Makefile.dependencies
@@ -2795,7 +2795,8 @@ $(MANIFESTS)/sst: \
 # Component star2html has configure dependencies on { perl },
 # which must be built before this component is configured.
 $(MANIFESTS)/star2html: \
-		$(MANIFESTS)/latex2html
+		$(MANIFESTS)/latex2html \
+		$(MANIFESTS)/latexsupport
 	cd applications/star2html \
 	  && $(MAKE_CPT)
 
