--- a/applications/star2html/star2html.in
+++ b/applications/star2html/star2html.in
@@ -709,10 +709,10 @@ if ($usehtlatex==1){
       $TEXINPUTS = $ENV{TEXINPUTS};
   }
 
-  if (defined $ENV{STARLATEXSUPPORT}) {
-      $TEX4HTENV = "TEX4HTENV=" . $ENV{STARLATEXSUPPORT} . '/tex4ht.env';
-      $TEX4HTHTF = "TEX4HTHTF=" . ':' . $ENV{STARLATEXSUPPORT} . ':';
-      $TEXINPUTS = join('//:', $TEXINPUTS, $ENV{STARLATEXSUPPORT});
+  if (defined $ENV{STARLINK_DIR}) {
+      $TEX4HTENV = "TEX4HTENV=" . $ENV{STARLINK_DIR} . '/share/latexsupport/tex4ht.env';
+      $TEX4HTHTF = "TEX4HTHTF=" . ':' . $ENV{STARLINK_DIR} . '/share/latexsupport:';
+      $TEXINPUTS = join('//:', $TEXINPUTS, $ENV{STARLINK_DIR} . '/share/latexsupport:');
   }
   my $tex4htcommand =  "TEXINPUTS=$TEXINPUTS $TEX4HTENV $TEX4HTHTF htlatex $DESTFILE \"starlinkxhtml.cfg,charset=\"utf-8\",fn-in\" ' -cvalidate -cstarfont' \"\" '-interaction=batchmode'";
   print $tex4htcommand . "\n";
