--- a/applications/star2html/star2html.in
+++ b/applications/star2html/star2html.in
@@ -712,7 +712,7 @@ if ($usehtlatex==1){
   if (defined $ENV{STARLINK_DIR}) {
       $TEX4HTENV = "TEX4HTENV=" . $ENV{STARLINK_DIR} . '/share/latexsupport/tex4ht.env';
       $TEX4HTHTF = "TEX4HTHTF=" . ':' . $ENV{STARLINK_DIR} . '/share/latexsupport:';
-      $TEXINPUTS = join('//:', $TEXINPUTS, $ENV{STARLINK_DIR} . '/share/latexsupport:');
+      $TEXINPUTS = join(':', $TEXINPUTS, $ENV{STARLINK_DIR} . '/share/latexsupport//:');
   }
   my $tex4htcommand =  "TEXINPUTS=$TEXINPUTS $TEX4HTENV $TEX4HTHTF htlatex $DESTFILE \"starlinkxhtml.cfg,charset=\"utf-8\",fn-in\" ' -cvalidate -cstarfont' \"\" '-interaction=batchmode'";
   print $tex4htcommand . "\n";
