--- a/applications/echomop/doc/Makefile.in
+++ b/applications/echomop/doc/Makefile.in
@@ -1,5 +1,6 @@
 # Makefile for the various forms of ECHOMOP documentation.
 
+STARLINK = @STARLINK@
 STAR2HTML = @STAR2HTML@
 HLINK = @HLINK@
 LN_S = @LN_S@
@@ -14,7 +15,7 @@ $(LATEX_DOCS): sun152/sun152.tex
 	cd sun152; tar cf ../$@ sun152.tex sun152_*.pdf
 
 sun152.pdf: sun152/sun152.tex
-	cd sun152; pdflatex sun152; pdflatex sun152; cd -; $(LN_S) sun152/sun152.pdf sun152.pdf
+	cd sun152; TEXINPUTS=$(STARLINK)/share/latexsupport//:$(TEXINPUTS) pdflatex sun152; TEXINPUTS=$(STARLINK)/share/latexsupport//:$(TEXINPUTS) pdflatex sun152; cd -; $(LN_S) sun152/sun152.pdf sun152.pdf
 
 $(HYPERTEXT_DOCS): sun152/sun152.htx/sun152.html
 	cd sun152; tar cf ../$@ sun152.htx
