latexsupport: mathjax shouldn't interpret latex commands
Fixes anissue noticed in SC/16 in commit 02498962c1 where the html
output was putting verbatim commands into mathmode following a
\[. This turned out to be due to mathjax interpreting this as meaning
'start maths now'. I have turned off mathjax interpretation of
TeX/Latex commands as tex4ht is (I believe) putting all of these into
mathml anyway. I don't think this introduces any issues with
existing documents.

(This bug wasn't noticeable if you had mathjax turned off in noscript)

--- a/applications/latexsupport/starlinkxhtml.cfg
+++ b/applications/latexsupport/starlinkxhtml.cfg
@@ -30,7 +30,7 @@
 %%%%%----------------MATHJAX
 % Use mathjax for the mathml (remove if using images)
 \Configure{@HEAD}{\HCode{<script type="text/javascript"
-    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>}}
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=MML_HTMLorMML"></script>}}
 \Configure{@HEAD}{\HCode{<style type="text/css">.MathJax_MathML {text-indent: 0;}</style>}}
 
 
