HTX: improved handling for ADS urls of obsolete documents.
There is now a single file (adsurl.txt) containing the ads ref for all
the starlink documents (obsolete and current). (This was taken from
the Starlink/adspubs repo on Github; it has slightly different
formatting from its source file 'star2bib.txt'). There is also a
separate file 'obsdoc.txt' that contains a list of all the obsolete
documents. When moving docs to obsolete, please update the list
'obsdoc.txt'. This change is to make it easier to keep this list
up-to-date.

--- a/applications/htx/Makefile.am
+++ b/applications/htx/Makefile.am
@@ -11,7 +11,7 @@ PUBLIC_SCR = hlink findme showme
 PRIVATE_SCR =  allfind browse creindex depends docfind dockey findbrowser \
 gettitle homepage htxpath moveddocs msgover multised newdocs newindex \
 oldindex reffind relink resolve settrap showhtml stdfile urlgen wrfiles \
-testdocs obsdoc_adsurl.txt
+testdocs adsurl.txt obsdoc.txt
 
 EXTRA_DIST = creindex.sed.in edhead.sed.in edtail.sed.in gethead.sed.in \
              gettitle.sed.in htxpath.in
