jcmtdr: Load Figaro include files from Figaro build dir
Use relative path. Also need to use current name for DTACODES
file (not DTA_CODES any more).

--- a/applications/obsolete/jcmtdr/applic/Makefile.am
+++ b/applications/obsolete/jcmtdr/applic/Makefile.am
@@ -5,8 +5,8 @@ noinst_LTLIBRARIES = libjcmtapplic.la
 libjcmtapplic_la_SOURCES = $(F_ROUTINES)
 
 # Need include files from the subs directory
-AM_FCFLAGS = -I../subs
-
+# and from FIGARO
+AM_FCFLAGS = -I../subs -I../../../figaro/dta -I../../../figaro/include
 
 F_ROUTINES = ae2rd1.f fake.f jcmtextc.f map2mem.f restore.f ae2rd2.f \
 iras_tag.f makemap.f map2ts.f ts2map.f
