--- a/applications/obsolete/iras90/configure.ac
+++ b/applications/obsolete/iras90/configure.ac
@@ -2,11 +2,12 @@ dnl    Process this file with autoconf to produce a configure script
 AC_REVISION($Revision$)
 
 dnl    Initialisation: package name and version number
-AC_INIT(iras90, 1.1-2, starlink@jiscmail.ac.uk)
+AC_INIT([iras90], [1.1-2], [starlink@jiscmail.ac.uk])
+AC_CONFIG_AUX_DIR([build-aux])
 
 dnl    Require autoconf-2.50 at least
-AC_PREREQ(2.50)
-AM_INIT_AUTOMAKE(1.8.2-starlink)
+AC_PREREQ(2.69)
+AM_INIT_AUTOMAKE([1.8.2-starlink subdir-objects])
 
 dnl    Sanity-check: name a file in the source directory -- if this
 dnl    isn't found then configure will complain
@@ -16,7 +17,7 @@ STAR_DEFAULTS(per-package-dirs)
 
 dnl    Find required versions of the programs we need for configuration
 AC_PROG_FC
-AC_PROG_LIBTOOL
+LT_INIT
 AC_PROG_LN_S
 STAR_MONOLITHS
 
