SUN/1: enable index in pdf output.
Also removed index file, as this will now be regenerated on
each build, so shouldn't be checked in to git.

--- a/docs/sun/001/Makefile.am
+++ b/docs/sun/001/Makefile.am
@@ -2,4 +2,4 @@
 
 stardocs_DATA = @STAR_LATEX_DOCUMENTATION@
 
-CLEANFILES = sun1.htx_tar sun1.ps sun1.toc sun1.log sun1.dvi sun1.aux
+CLEANFILES = sun1.htx_tar sun1.pdf sun1.toc sun1.log sun1.dvi sun1.aux sun1.ind sun1.idx sun1.out sun1.log sun1.ilg
