--- a/Makefile.dependencies
+++ b/Makefile.dependencies
@@ -2390,6 +2390,11 @@ $(MANIFESTS)/sgp31: \
 	cd docs/sgp/031 \
 	  && $(MAKE_CPT)
 
+$(MANIFESTS)/sgp38: \
+		$(MANIFESTS)/star2html
+	cd docs/sgp/038 \
+	  && $(MAKE_CPT)
+
 $(MANIFESTS)/sgp4: \
 		$(MANIFESTS)/star2html
 	cd docs/sgp/004 \
@@ -2978,6 +2983,7 @@ SUPPORTED_COMPONENTS = \
 	$(MANIFESTS)/sgp16 \
 	$(MANIFESTS)/sgp28 \
 	$(MANIFESTS)/sgp31 \
+	$(MANIFESTS)/sgp38 \
 	$(MANIFESTS)/sgp4 \
 	$(MANIFESTS)/sgs \
 	$(MANIFESTS)/shl \
