thirdparty: Add perl-Pod-SST to perlsys/perlmods
This is to allow ORAC-DR to automatically generate sst listings
from pods for SUN/265, SUN/264 and SUN/260

--- a/.gitmodules
+++ b/.gitmodules
@@ -163,3 +163,6 @@
 [submodule "thirdparty/erfa/erfa"]
 	path = thirdparty/erfa/erfa
 	url = git://github.com/liberfa/erfa.git
+[submodule "thirdparty/perlsys/perlmods/perl-Pod-SST"]
+	path = thirdparty/perlsys/perlmods/perl-Pod-SST
+	url = ../perl-Pod-SST
