--- a/docs/sc/013/configure.ac
+++ b/docs/sc/013/configure.ac
@@ -9,11 +9,11 @@ AC_PREREQ(2.50)
 dnl    Require Starlink automake
 AM_INIT_AUTOMAKE(1.8.2-starlink)
 
-AC_CONFIG_SRCDIR([sc13.xml])
+AC_CONFIG_SRCDIR([sc13.tex])
 
 STAR_DEFAULTS(docs-only)
 
-STAR_XML_DOCUMENTATION(sc13)
+STAR_LATEX_DOCUMENTATION(sc13)
 
 AC_CONFIG_FILES([Makefile component.xml])
 
